# py_win_auto

./: README.md  pyproject.toml
src/py_win_auto/: auto.py
